# image-publisher-downdetector

./: .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: docker-image.yml  pytest.yaml
image_publish_downdetector/: application.py  config.py  down_detector.py  image_cache_comparer.py  main.py  notifier.py  notify_message_factory.py  state_switch.py
image_publish_downdetector/down_detector/: __init__.py  down_detector.py  image_fetcher.py
image_publish_downdetector/notifier/: notify_message_factory.py
tests/: test_application.py
tests/down_detector/: test_cache_comparer.py  test_down_detector.py  test_imae_fetcher.py  test_state_switch.py
tests/notifier/: test_notifier.py  test_notify_message_factory.py
